--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,43 +15,9 @@ permissions:
   contents: write
 
 jobs:
-  # Run tests before building release
-  run-tests:
-    name: Run Tests Before Release
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.24'
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run Go tests
-      run: |
-        go test -v -coverprofile=coverage.out ./...
-        go tool cover -func=coverage.out | tail -1
-
-    - name: Run Python tests
-      run: pytest tests/ -v --tb=short || echo "Some tests may require display"
-      continue-on-error: true
-
   prepare-release:
     name: Prepare Release
     runs-on: ubuntu-latest
-    needs: run-tests
     outputs:
       version: ${{ steps.get_version.outputs.version }}
       release_notes: ${{ steps.release_notes.outputs.notes }}
@@ -130,10 +96,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # FIX: Generate a .spec file to avoid PowerShell argument parsing issues with semicolons
+    # FIX: Removed --clean as it is not supported by pyi-makespec
     - name: Create PyInstaller Spec
       run: |
-        pyi-makespec --noconsole --onefile --clean --name "ConniesUploader" `
+        pyi-makespec --noconsole --onefile --name "ConniesUploader" `
           --icon "logo.ico" `
           --add-binary "uploader.exe;." `
           --add-data "logo.ico;." `
@@ -143,7 +109,7 @@ jobs:
 
     - name: Build from Spec
       run: |
-        pyinstaller ConniesUploader.spec
+        pyinstaller --clean ConniesUploader.spec
 
     - name: Verify build and bundling
       run: |
@@ -330,7 +296,6 @@ jobs:
         cp artifacts/macos-build/ConniesUploader release-assets/ConniesUploader-macos
         cp artifacts/macos-build/ConniesUploader.sha256 release-assets/ConniesUploader-macos.sha256
         cp artifacts/macos-build/ConniesUploader-*-macos-x64.zip release-assets/
-
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
